# 3D-SDL-PLOTTER-GAME

./: .gitignore  CMakeLists.txt  README.md
assets/: materials.def  prefabs.def
assets/textures/: brick.ppm  crate.ppm  panel.ppm
examples/: demo_main.cpp
game/: Assets.h  Editor.h  EditorCamera.h  EditorUI.h  LevelBrowser.h  Map.h  Overlay.h  Player.h  World.h  editor_main.cpp  main.cpp
include/raytracer/: Box.h  Camera.h  Hittable.h  Light.h  Material.h  Plane.h  RayCaster.h  RayTracer.h  SDLViewport.h  Scene.h  Shader.h  Sphere.h  Texture.h  Vec3.h
maps/: 01_level_one.map  arena.map  tower.map
src/: ImageIO.cpp  RayTracer.cpp  Sphere.cpp
